feat meta / seo

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,16 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
+
+		<meta
+			name="keywords"
+			content="China Unofficial Archives, 中国非官方档案, Chinese independent thought, 独立思想, unofficial archives, 非官方档案, Chinese intellectuals, 中国知识分子, underground culture, 地下文化, dissident writing, 异议写作, contemporary China, 当代中国, censorship, 审查制度, digital archive, 数字档案, open access, 开放存取, Chinese essays, 中文文章, political discourse, 政治话语, Krisenstab, Giacomo Nanni, Fidel Thomet, research platform, 研究平台, media studies, 传媒研究, digital humanities, 数字人文"
+		/>
+
+		<meta name="author" content="krisenstab.net" />
+		<meta name="robots" content="index, follow" />
+		<meta name="googlebot" content="index, follow" />
+		<meta name="theme-color" content="#9773b0" />
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
